# god_hand

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/ap/: ap.cpp  secondary_main.c  secondary_main.h
src/bsp/: FreeRTOSConfig.h  bsp.c
src/hw/: hw.cpp  hw_def.h
src/hw/driver/: adxl345.c  led.c  spi.c
